# finance-logs-pipeline

./: .gitignore  README.md  pyproject.toml
finance_logs_pipeline/: __init__.py  config.py  main.py  models.py
finance_logs_pipeline/parsers/: __init__.py  ai_parser.py  file_processor.py
finance_logs_pipeline/tests/: __init__.py  test_config.py  test_models.py
